[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Characters/character_0000.png" type="Texture" id=1]
[ext_resource path="res://entities/player.gd" type="Script" id=2]
[ext_resource path="res://assets/Tiles/tile_0071.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 11 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 2.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.5, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 3.9 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 0.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 0.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="HUDGroup" type="Control" parent="."]
margin_left = -156.0
margin_top = -86.0
margin_right = 182.0
margin_bottom = 110.0

[node name="LadderIndicator" type="Sprite" parent="HUDGroup"]
position = Vector2( 24, 155 )
texture = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="HUDGroup/LadderIndicator"]
margin_left = -4.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 4.0
disabled = true
pressed = true

[node name="LadderActiveIndicator" type="Sprite" parent="HUDGroup"]
position = Vector2( 72, 175 )
texture = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="HUDGroup/LadderActiveIndicator"]
margin_left = -4.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 4.0
disabled = true
pressed = true

[node name="Character0000" type="Sprite" parent="HUDGroup/LadderActiveIndicator"]
position = Vector2( 1, 5 )
scale = Vector2( 0.416667, 0.416667 )
texture = ExtResource( 1 )

[node name="LadderIndicatorUp" type="Sprite" parent="HUDGroup"]
position = Vector2( 27, 125 )
texture = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="HUDGroup/LadderIndicatorUp"]
margin_left = -4.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 4.0
disabled = true
pressed = true

[node name="LadderIndicatorDown" type="Sprite" parent="HUDGroup"]
position = Vector2( 26, 181 )
texture = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="HUDGroup/LadderIndicatorDown"]
margin_left = -4.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 4.0
disabled = true
pressed = true

[node name="Character0000" type="Sprite" parent="."]
position = Vector2( 12, 12 )
texture = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 13 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 12, 12 )
current = true
zoom = Vector2( 0.333, 0.333 )

[node name="WaterDetector" type="KinematicBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="WaterCollision" type="CollisionShape2D" parent="WaterDetector"]
position = Vector2( 12, 10 )
shape = SubResource( 2 )

[node name="HeadWaterDetector" type="KinematicBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="HeadWaterCollision" type="CollisionShape2D" parent="HeadWaterDetector"]
position = Vector2( 12, 3 )
shape = SubResource( 3 )

[node name="LadderDetector" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="LadderCollision" type="CollisionShape2D" parent="LadderDetector"]
position = Vector2( 12, 20 )
shape = SubResource( 5 )

[node name="LadderDetectorUpper" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="LadderCollision" type="CollisionShape2D" parent="LadderDetectorUpper"]
position = Vector2( 12, 15.5 )
shape = SubResource( 6 )

[node name="LadderDetectorLower" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="LadderCollision" type="CollisionShape2D" parent="LadderDetectorLower"]
position = Vector2( 12, 24.5 )
shape = SubResource( 7 )
